--- a/src/podcast.html
+++ b/src/podcast.html
@@ -40,6 +40,18 @@
         'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
     })(window,document,'script','dataLayer','GTM-NWVP7S7');</script>
     <!-- End Google Tag Manager -->
+
+      <!-- Global site tag (gtag.js) - Google Analytics ad tracking-->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-188331627-1">
+    </script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-188331627-1');
+    </script>
+    <!-- END Global site tag (gtag.js) - Google Analytics -->
 </head>
 
 <body>
