--- a/src/engineers.html
+++ b/src/engineers.html
@@ -93,38 +93,6 @@
 
 <main>
 
-    <!-- CTA - Data Security for Innovative Products     -->
-    <div class="bg-gray-50">
-        <div class="max-w-7xl mx-auto px-4 py-8 sm:px-6 lg:px-8">
-          <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
-            <div class="lg:w-0 lg:flex-1">
-              <h2 class="text-3xl font-extrabold tracking-tight text-white">
-                Security for Your Products
-              </h2>
-              <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-                Learn why Peacemakr is the best choice for startups and small businesses in Finance, Healthcare, Defense, and Insurance.
-              </p>
-            </div>
-            <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
-              <form class="sm:flex" action="https://peacemakr.us1.list-manage.com/subscribe/post?u=ac9d1e71791321a3f00ebbf6d&amp;id=1f0cf83e57" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
-                <input type="hidden" value="128" name="group[380002][128]" id="mce-group[380002]-380002-3">
-                <label for="emailAddress" class="sr-only">Email address</label>
-                <input type="email" value="" name="EMAIL" id="mce-EMAIL" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
-                <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0" name="subscribe" id="mc-embedded-subscribe">
-                  Get whitepaper
-                </button>
-
-                <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
-
-                <div style="position: absolute; left: -5000px;" aria-hidden="true">
-                  <input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value="">
-                </div>
-
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
 
       <!-- Featueres -->
 <div class="relative bg-white pt-16 pb-32 overflow-hidden">
@@ -849,16 +817,25 @@
 
     <!-- CTA Data Security Assessment -->
   <div class="bg-indigo-600">
-  <div class="max-w-2xl mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
+  <div class="max-w-3xl mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
     <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
       <span class="block">Want to learn more?</span>
     </h2>
     <p class="mt-4 text-lg leading-6 text-indigo-200">We'd love to share.</p>
-    <a href="mailto:info@peacemakr.io"
-       class="mt-8 w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 sm:w-auto"
-        onclick="location.href='mailto:info@peacemakr.io">
-        Request E2E-Encryption Whitepaper
-    </a>
+    <form class="sm:flex mt-8 w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 sm:w-auto"
+          action="https://peacemakr.us1.list-manage.com/subscribe/post?u=ac9d1e71791321a3f00ebbf6d&amp;id=1f0cf83e57"
+          method="post" id="mc-embedded-subscribe-form"
+          name="mc-embedded-subscribe-form">
+        <input type="hidden" value="2" name="group[380002][2]" id="mce-group[380002]-380002-1">
+        <label for="emailAddress" class="sr-only">Email address</label>
+        <input type="email" value="" name="EMAIL" id="mce-EMAIL" required class="w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
+        <button type="submit" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0" name="subscribe" id="mc-embedded-subscribe">
+          Get E2E-Encryption Whitepaper
+        </button>
+        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+            <input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value="">
+          </div>
+        </form>
   </div>
 </div>
 
