--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -127,7 +127,7 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <p>Peacemakr is a system that delivers key material across a complex ecosystem of software and helps that software use those keys correctly to encrypt and decrypt data. This allows your software to integrate end-to-end encryption into any application, quickly. </p>
+                                    <p>Peacemakr is a system that delivers key material across a complex ecosystem of software and helps that software use those keys correctly to encrypt and decrypt data. Open-source SDKs allow your software to integrate End-to-End-Encryption into any application quickly. </p>
                                 </div>
                             </dt>
                         </div>
@@ -147,10 +147,9 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <p>SSL/TLS only protects data when it is in transit. Encryption at rest only protects data when it is on disk. Both of these leave data exposed everywhere else. This allows threats many chances to steal the data from databases, applications, in logs, proxies, or just by reading the disk.</p>
-                                    <p> End-to-End-Encryption inside your application protects the data as soon as it’s created. Your data’s entire lifecycle is now protected, eliminating unessesary risks to data leaks.</p>
-
-                                    <p>For example, consider a log collection system that transmits data to a log aggregator. If you only encrypt with TLS, then the logs are exposed on both the original system and in the aggregator. However, by encrypting the logs as soon as they are produced with Peacemakr’s End-to-End-Encryption, then the logs are protected in all systems. The Application-Layer Encryption enabled customers to use a SaaS provider to aggregate logs without having to trust a multi-tenant cloud.</p>
+                                    <p>SSL/TLS only protects data when it is in transit. Encryption at rest only protects data when it is on disk. Both of these leave data exposed everywhere else. Bad actors can still steal the data from databases, applications, logs, proxies, or even just by reading a file.</p>
+                                    <p> End-to-End-Encryption protects your data immediately upon creation and keeps it encrypted across your complex ecosystem of software. Your data’s entire lifecycle is now protected, eliminating unnecessary risks of data leaks.</p>
+                                    <p>For example, consider a log collection system that transmits data to a log aggregator. If you only encrypt with TLS, then the logs are exposed to both the original system and the aggregator. However, by encrypting the logs with Peacemakr’s End-to-End-Encryption, the logs are protected full their full lifecycle. The End-to-End-Encryption enables customers to use a SaaS provider to aggregate logs without trusting a multi-tenant cloud.</p>
                                 </div>
                             </dt>
                         </div>
@@ -168,7 +167,7 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <p>The security of your encrypted data depends on the security and management of your keys. Building a Key Lifecycle Management and Secure and Scalable Key Delivery mechanisms are not trivial engineering tasks. Further, there’s no standard to help guide what the design should be. This not only increases the likelihood of costly mistakes, but it prohibits interoperability between different systems across the different implementations, which restricts the ability to securely collaborate with future vendors, partners, and customers.</p>
+                                    <p>The security of your encrypted data depends on the protection and management of your keys. Building a Key Lifecycle Management and Secure, Scalable Key Delivery mechanisms are not trivial engineering tasks. Further, there’s no standard to help guide what the design should be. Since there is no standard, designing a new system always takes time, and implementation mistakes are incredibly costly. In-house solutions prohibit interoperability and collaboration between different companies, often becoming requirements later as your business grows.</p>
                                 </div>
                             </dt>
                         </div>
@@ -225,8 +224,8 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <P>It depend on your threat model. When your Key Deriver is self-hosted, your keys are protected against the same threat models as protect your Key Deriver.</P>
-                                    <P>In order to make things easy, we host the first Key Deriver for you in the cloud. If you need to bring your Key Deriver in-house you have the option to relocate your Key Deriver. You can do this relocation over and over; in fact, you can do it any time you rotate your keys.</P>
+                                    <P>It depends on your threat model. To take advantage of our zero-trust feature, your Key Deriver must be self-hosted. This way, your keys are safeguarded against the same threat models as your self-hosted Key Deriver.</P>
+                                    <P> To make things easy, we host your first Key Deriver in the cloud. If you need to bring your Key Deriver in-house, you can relocate your Key Deriver at any time. You can relocation it over and over; in fact, you can do it any time you rotate your keys.</P>
                                 </div>
                             </dt>
                         </div>
@@ -236,7 +235,7 @@
                                 <!-- Expand/collapse question button -->
                                 <button aria-controls="faq" aria-expanded="false" class="accordion text-left w-full flex justify-between items-start text-gray-400" type="button">
                                     <span class="font-medium text-gray-900">
-                                        How doe keys get into my clients?
+                                        How do keys get into my clients?
                                     </span>
                                     <span class="ml-6 h-7 flex items-center">
                                         <svg aria-hidden="true" class="rotate-0 h-6 w-6 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -245,7 +244,64 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <p>A client is anything software that integrates with and registers an SDK. Once a key is derived it’s encrypted with the client's public asymmetric key and delivered to that specific authorized client. Not even Peacemakr can snoop on that key material. For the strongest zero-trust threat model, you'd need to whitelist your trusted Certificate Authority and sign your clients and Key Derivers public keys (yes, we have an API for that).</p>
+                                    <p>A client is anything software that integrates with an SDK. Once a key is derived, it's encrypted with the client's public asymmetric key and delivered to that specifically authorized client. Not even Peacemakr can snoop on that key material. For the most robust zero-trust threat model, you'd need to whitelist your trusted Certificate Authority and issue your clients and Key Derivers an X.509 certificate (yes, we have an API for that).</p>
+                                </div>
+                            </dt>
+                        </div>
+
+                        <div class="pt-4">
+                            <dt class="text-lg">
+                                <!-- Expand/collapse question button -->
+                                <button aria-controls="faq" aria-expanded="false" class="accordion text-left w-full flex justify-between items-start text-gray-400" type="button">
+                                    <span class="font-medium text-gray-900">
+                                        Does my data ever leave the client?
+                                    </span>
+                                    <span class="ml-6 h-7 flex items-center">
+                                        <svg aria-hidden="true" class="rotate-0 h-6 w-6 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                                        </svg>
+                                    </span>
+                                </button>
+                                <div class="panel text-gray-500">
+                                    <p>No. All encryption, decryption, signing, and verifications happen in your client.</p>
+                                </div>
+                            </dt>
+                        </div>
+
+                        <div class="pt-4">
+                            <dt class="text-lg">
+                                <!-- Expand/collapse question button -->
+                                <button aria-controls="faq" aria-expanded="false" class="accordion text-left w-full flex justify-between items-start text-gray-400" type="button">
+                                    <span class="font-medium text-gray-900">
+                                        Where do encryptions and decryptions occur?
+                                    </span>
+                                    <span class="ml-6 h-7 flex items-center">
+                                        <svg aria-hidden="true" class="rotate-0 h-6 w-6 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                                        </svg>
+                                    </span>
+                                </button>
+                                <div class="panel text-gray-500">
+                                    <p>All encryptions and decyprtion happen directly in your client. Your data never leaves your client.</p>
+                                </div>
+                            </dt>
+                        </div>
+
+                        <div class="pt-4">
+                            <dt class="text-lg">
+                                <!-- Expand/collapse question button -->
+                                <button aria-controls="faq" aria-expanded="false" class="accordion text-left w-full flex justify-between items-start text-gray-400" type="button">
+                                    <span class="font-medium text-gray-900">
+                                        Can I share encrypted data outside of my organization?
+                                    </span>
+                                    <span class="ml-6 h-7 flex items-center">
+                                        <svg aria-hidden="true" class="rotate-0 h-6 w-6 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                                        </svg>
+                                    </span>
+                                </button>
+                                <div class="panel text-gray-500">
+                                    <p> Yes. Peacemakr supports authorized collaborations. As long as the receiving party integrates with Peacemakr and is an authorized collaborator, they will be able to decrypt your data. As soon as you remove a collaborator, you remove their access to your keys. </p>
                                 </div>
                             </dt>
                         </div>
@@ -264,8 +320,8 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <p>Peacemakr’s network provides the basis for secure collaboration.</p>
-                                    <p>At Peacemakr, we divide our customers into Organizations. Your account belongs to an Organization that defines an authorization scope for your keys. You can share some of the keys in your Organization with any Organization in the Peacemakr network. Even when your authorized a collaborator, you control your keys and security policies, even in someone else's system. End a collaboration at any time, and their access to your keys are revoked.</p>
+                                    <p> Peacemakr's network provides the basis for secure collaboration.</p>
+                                    <p>At Peacemakr, we divide our customers into Organizations. Your account belongs to an Organization that defines an authorization scope for your keys. You can share some of the keys in your Organization with any Organization in the Peacemakr network. Even when you authorized a collaborator, you control your keys and security policies, even in someone else's system. End a collaboration at any time, and their access to your keys.</p>
                                 </div>
                             </dt>
                         </div>
