FAQs -> FAQ, and one more question, about offline operation

--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible">
-    <title>Peacemakr | faqs</title>
+    <title>Peacemakr | faq</title>
     <meta content="width=device-width,minimum-scale=1" name="viewport">
     <link href="styles.css" rel="stylesheet">
     <link href="./images/peacemakr.ico" rel="shortcut icon" type="image/x-icon" />
@@ -86,7 +86,7 @@
 
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                         <span class="block xl:inline">Peacemakr<br/></span>
-                        <span class="block text-indigo-600 xl:inline">FAQs</span>
+                        <span class="block text-indigo-600 xl:inline">FAQ</span>
                     </h1>
                     <p class="mt-4 text-lg text-gray-500">Can’t find the answer you’re looking for? Reach out to our <a class="font-medium text-indigo-600 hover:text-indigo-500" href="mailto:info@peacemakr.io">customer support</a> team.
                     </p>
@@ -325,6 +325,27 @@
                                 </div>
                             </dt>
                         </div>
+
+                        <div class="pt-4">
+                            <dt class="text-lg">
+                                <!-- Expand/collapse question button -->
+                                <button aria-controls="faq" aria-expanded="false" class="accordion text-left w-full flex justify-between items-start text-gray-400" type="button">
+                                    <span class="font-medium text-gray-900">
+                                        Does encryption and decryption work offline?
+                                    </span>
+                                    <span class="ml-6 h-7 flex items-center">
+                                        <svg aria-hidden="true" class="rotate-0 h-6 w-6 transform" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                            <path d="M19 9l-7 7-7-7" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
+                                        </svg>
+                                    </span>
+                                </button>
+                                <div class="panel text-gray-500">
+                                    <p> Yes. Once keys and security policies are delivered to a client, the client can encrypt and decrypt offline. You can either pre-install keys or the client can jump online at least once to receive key material from your Key Derivers.</p>
+                                </div>
+                            </dt>
+                        </div>
+
+
                     </dl>
                 </div>
             </div>
