--- a/src/engineers_faqs.html
+++ b/src/engineers_faqs.html
@@ -108,7 +108,7 @@
                                     </span>
                                 </button>
                                 <div class="panel text-gray-500">
-                                    <p>Building data security mechanisms in-house is expensive and time-consuming because there's no standard for application-layer data security. Not enough data security engineers in the world meet the demand. Data Security tools available in the marketplace today are just tools and bring with them an implicit expectation that you will build a bespoke solution. </p>
+                                    <p>Building data security mechanisms in-house is expensive and time-consuming because there's no standard for application-layer data security. There are not enough data security engineers in the world meet the demand. The data security tools available in the marketplace are just tools and require you to build a bespoke solution. </p>
                                 </div>
                             </dt>
                         </div>
