--- a/src/podcast.html
+++ b/src/podcast.html
@@ -176,7 +176,7 @@
 <div class="bg-white">
   <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8">
     <div class="max-w-3xl mx-auto text-center">
-      <h2 class="text-3xl font-extrabold text-gray-900">Topcis</h2>
+      <h2 class="text-3xl font-extrabold text-gray-900">Topics</h2>
       <p class="mt-4 text-lg text-gray-500">Each episode is a 30 minutes interview, and cover a wide range of topics</p>
     </div>
     <dl class="mt-12 space-y-10 sm:space-y-0 sm:grid sm:grid-cols-2 sm:gap-x-6 sm:gap-y-12 lg:grid-cols-4 lg:gap-x-8">
