--- a/src/pricing.html
+++ b/src/pricing.html
@@ -756,7 +756,7 @@
                         </svg>
                       </div>
                       <p class="ml-3 text-base font-medium text-gray-500">
-                        Email & Phone Platnum Support
+                        Email & Phone Platinum Support
                       </p>
                     </li>
 
@@ -768,7 +768,7 @@
                         </svg>
                       </div>
                       <p class="ml-3 text-base font-medium text-gray-500">
-                        99.9% guaranteed uptime SLA
+                        99.9% guarenteed uptime SLA
                       </p>
                     </li>
                   </ul>
