--- a/src/podcast.html
+++ b/src/podcast.html
@@ -145,7 +145,7 @@
           Discover Real People,<br>Overcoming Security Problems
         </h2>
         <p class="mt-4 max-w-3xl text-lg text-indigo-100">
-          30 mintues interviews with entrepreneurs, engineers, and leaders that explore modern security dilemmas and opportunities we face.
+          30-minute interviews with entrepreneurs, engineers, and leaders that explore modern security dilemmas and opportunities we face.
         </p>
       </div>
       <div class="mt-12 sm:w-full sm:max-w-md lg:mt-0 lg:ml-8 lg:flex-1">
