--- a/src/pricing.html
+++ b/src/pricing.html
@@ -693,7 +693,7 @@
                       </svg>
                     </div>
                     <p class="ml-3 text-base font-medium text-gray-500">
-                      99.5% guarenteed uptime SLA
+                      99.5% guaranteed uptime SLA
                     </p>
                   </li>
                 </ul>
@@ -768,7 +768,7 @@
                         </svg>
                       </div>
                       <p class="ml-3 text-base font-medium text-gray-500">
-                        99.9% guarenteed uptime SLA
+                        99.9% guaranteed uptime SLA
                       </p>
                     </li>
                   </ul>
