Fix missing nav bar

--- a/src/podcast.html
+++ b/src/podcast.html
@@ -58,6 +58,17 @@
 <!-- Google Tag Manager (noscript) -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NWVP7S7"
                   height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+
+<!--Link all the pages-->
+<a href="solutions.html"></a>
+<a href="engineers.html"></a>
+<a href="media.html"></a>
+<a href="pricing.html"></a>
+<a href="./images/p_logo.png"></a>
+<a href="podcast.html"></a>
+<a href="engineers_faqs.html"></a>
+<a href="index.html"></a>
+
 <!-- End Google Tag Manager (noscript) -->
 @@include('./navigation.html')
 <div class="relative bg-white overflow-hidden">
