Podcast is now published and available in a lot of places. Add the links.

--- a/src/podcast.html
+++ b/src/podcast.html
@@ -148,6 +148,7 @@
   }
   ```
 -->
+
 <div class="bg-white">
   <div class="max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:py-16 lg:px-8">
     <div class="py-10 px-6 bg-indigo-600 rounded-3xl sm:py-16 sm:px-12 lg:p-20 lg:flex lg:items-center">
@@ -164,24 +165,62 @@
           <label for="emailAddress" class="sr-only">Email address</label>
           <input type="email" value="" name="EMAIL" id="mce-EMAIL" autocomplete="email" required class="required email w-full border-white px-5 py-3 placeholder-gray-500 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white rounded-md" placeholder="Enter your email">
           <button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="mt-3 w-full flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-500 hover:bg-indigo-400 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-indigo-700 focus:ring-white sm:mt-0 sm:ml-3 sm:w-auto sm:flex-shrink-0">
-            Subscribe
+            Get Updates
           </button>
           <input type="hidden" value="1" name="group[380002][1]" id="mce-group[380002]-380002-0">
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_ac9d1e71791321a3f00ebbf6d_1f0cf83e57" tabindex="-1" value=""></div>
         </form>
-<!-- MIKE:        <p class="mt-3 text-sm text-indigo-100">
-          We care about the protection of your data. Read our
-          <a href="#" class="text-white font-medium underline">
-            Privacy Policy.
-          </a>
-        </p> -->
       </div>
     </div>
   </div>
 </div>
 
 
+<!-- This example requires Tailwind CSS v2.0+ -->
+<div class="bg-white">
+  <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8">
+    <!-- <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider"> </p>
+
+    <iframe title="The Security Podcast of Silicon Valley" allowtransparency="true" height="240" width="100%" style="border: none; min-width: min(100%, 430px);" scrolling="no" data-name="pb-iframe-player" src="https://www.podbean.com/player-v2/?i=gr2vk-b4bf98-pbblog-playlist&share=1&download=1&rtl=0&fonts=Arial&skin=1&order=episodic&limit=10&filter=all&ss=a713390a017602015775e868a2cf26b0&btn-skin=11&size=240" allowfullscreen=""></iframe>
+
+    <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider"></p> -->
+    <p class="text-center text-base font-semibold uppercase text-gray-600 tracking-wider">
+      Subscribe everywhere you listen to podcasts
+    </p>
+    <div class="mt-6 grid grid-cols-2 gap-0.5 md:grid-cols-3 lg:mt-8">
+      <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50 hover:bg-gray-200">
+        <a href="https://podcasts.apple.com/us/podcast/the-security-podcast-of-silicon-valley/id1566441549">
+          <img class="max-h-12" src="./images/iOSPodcasts.png" alt="iOS">
+        </a>
+      </div>
+      <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50 hover:bg-gray-200">
+        <a href="https://www.amazon.com/item_name/dp/B08K58L3G1/ref=sr_1_1?dchild=1&keywords=the+security+podcast+of+silicon+valley&qid=1621373621&s=audible&sr=1-1">
+          <img class="max-h-12" src="./images/Audible.png" alt="Audible">
+        </a>
+      </div>
+      <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50 hover:bg-gray-200">
+        <a href="https://open.spotify.com/show/5lK5ZeozOPsZD4cR0Ii5pM?si=pTRQvxgORayFrF2JRBoivA">
+          <img class="max-h-12" src="./images/Spotify.png" alt="Spotify">
+        </a>
+      </div>
+      <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50 hover:bg-gray-200">
+        <a href="https://podcasts.google.com/feed/aHR0cHM6Ly9mZWVkLnBvZGJlYW4uY29tL3RoZXNlY3VyaXR5cG9kY2FzdG9mc2lsaWNvbnZhbGxleS9mZWVkLnhtbA">
+          <img class="max-h-12" src="./images/GooglePodcasts.png" alt="Google Podcasts">
+        </a>
+      </div>
+      <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50 hover:bg-gray-200">
+        <a href="https://www.iheart.com/podcast/269-the-security-podcast-of-si-82267978/">
+          <img class="max-h-12" src="./images/IHeartRadio.png" alt="IHeart Raodio">
+        </a>
+      </div>
+      <div class="col-span-1 flex justify-center py-8 px-8 bg-gray-50 hover:bg-gray-200">
+        <a href="https://player.fm/series/the-security-podcast-of-silicon-valley">
+          <img class="max-h-12" src="./images/playerfmPodcasts.svg" alt="Player FM">
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 
 <!-- Feature table -->
 <div class="bg-white">
