--- a/src/index.html
+++ b/src/index.html
@@ -88,7 +88,7 @@
                 </span>
                 </h1>
                  <p class="mt-3 text-base text-gray-500 mt-5 text-xl lg:text-lg xl:text-xl">
-                     Eliminate all your data risks with one simple and proven platform that instantly raises your security bar.
+                     Eliminate all your data risks with one simple and affordable platform that instantly raises your security bar.
                 </p>
             </div>
 
