Add in a link to open source slack channel invite

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -209,6 +209,29 @@
                 </div>
             </div>
 
+
+            <!-- This example requires Tailwind CSS v2.0+ -->
+<div class="relative bg-gray-50 pt-16 overflow-hidden sm:pt-24 lg:pt-32">
+  <div class="mx-auto max-w-md px-4 text-center sm:px-6 sm:max-w-3xl lg:px-8 lg:max-w-7xl justify-center">
+    <div>
+      <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
+        Get Your Questions Answered
+      </p>
+      <div class="mt-8 text-center">
+          <a href="https://join.slack.com/t/peacemakropen-nv36597/shared_invite/zt-rdon687b-g_k8U7wJKdBaCx1l0iYG_w" class="inline-flex px-4 py-2 border border-transparent text-base font-medium rounded-md shadow-sm text-white bg-indigo-600 hover:bg-indigo-700">
+            Join Peacemakr's Slack
+          </a>
+    </div>
+<!--       <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
+        Phasellus lorem quam molestie id quisque diam aenean nulla in. Accumsan in quis quis nunc, ullamcorper malesuada. Eleifend condimentum id viverra nulla.
+      </p> -->
+    </div>
+    <div class="mt-12 justify-center">
+      <img class="rounded-lg shadow-xl ring-1 ring-black ring-opacity-5 mx-auto" src="./images/peacemakr-slack.png" alt="Peacemakr Slack Channel">
+    </div>
+  </div>
+</div>
+
     <div class="bg-white">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
